Added a LOT of stuff

--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,13 @@ title: About Me
   </div>
   <article class="seven columns">
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      I’m Jucelle. A designer, illustrator, observer and master doodler currently residing in San Francisco Bay Area. I’m easy to get along with and enjoy collaborating with fellow creatives and adventurers. I always equip myself with two trusty Moleskines in hand – one to keep myself on top of things and the other to scribble whatever awesome and not so awesome ideas I may have.
     </p>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+      I enjoy being a creative. Every project that I make is approached with intelligent, thoughtful and well-informed ideations. Most of my work is centered around branding, identities, graphics, packaging and print.
     </p>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+      I’m currently infatuated by watercolors, hand drawn letterforms, textures and organic-style vectors.
     </p>
   </article>
 </section>
