--- a/contact/index.html
+++ b/contact/index.html
@@ -3,15 +3,19 @@ layout: default
 title: Contact
 ---
 
-<section class="sixteen columns">
-  <div class="five offset-by-three columns alpha">
-    <h5>Would love to hear from you!</h5>
+<section class="ten offset-by-three columns">
+  <div class="five columns alpha">
+    <h5>Say Hi!</h5>
+    <br>
+    <p>
+      I'm always open for commission inquiries. If you’d like to discuss work or just want to share your thoughts, feel free to drop me a message. Would love to hear from you!
+    </p>
     <p>Email: jucelle.lim@gmail.com</p>
   </div>
-  <form class="eight columns omega contact-form">
-    <input class="five columns alpha" type="text" id="contact-name" placeholder="Name" width="35" />
-    <input class="five columns alpha" type="text" id="contact-email" placeholder="Email" />
-    <textarea class="five columns alpha" id="contact-message" placeholder="Message" rows="16"></textarea>
-    <input class="three offset-by-one columns" type="image" src="/images/send-button.png" alt="submit button" />
+  <form class="five columns omega contact-form">
+    <input type="text" style="width:100%" id="contact-name" placeholder="Name" />
+    <input type="text" style="width:100%" id="contact-email" placeholder="Email" />
+    <textarea style="width:100%" id="contact-message" placeholder="Message" rows="16"></textarea>
+    <input id="send-button" type="image" src="/images/send-button.png" alt="submit button" />
   </form>
 </section>
