--- a/resume/index.html
+++ b/resume/index.html
@@ -1,96 +1,108 @@
 ---
 layout: default
+title: Resume
 ---
 
 <section class="twelve offset-by-two columns resume">
-  <h5>EDUCATION</h5>
   <article>
-    <div>
-      University of Connecticut, Bachelor of Fine Arts in Communication Design
-      <div class="italic">Storrs, CT</div>
+    <header>
+      <img class="resume-icon" src="/images/resume/education-icon.png" alt="resume icon"/>
+      <h5>EDUCATION</h5>
+    </header>
+    <div class="title">
+      University of Connecticut, Bachelor of Fine Arts in Communication Design <br>
+      <em>Storrs, CT</em>
     </div>
   </article>
-  <h5>EXPERIENCE</h5>
+
   <article>
-    <div class="three columns alpha">
-      Education.com
-      <div class="italic">Redwood City, CA</div>
+    <header>
+      <img class="resume-icon" src="/images/resume/experiences-icon.png" alt="experience icon"/>
+      <h5>EXPERIENCE</h5>
+    </header>
+
+    <div class="three columns alpha title">
+      Education.com <br>
+      <em>Redwood City, CA</em>
     </div>
-    <div class="nine columns alpha">
+    <div class="eight columns omega">
       <div>
         Freelance Graphic Designer / Illustrator, 
-        <span class="italic">July 2012 - Present</span>
+        <em>July 2012 - Present</em>
       </div>
       <p>
         Responsible for creating vector and hand drawn illustrations
         as well as fun and engaging worksheet layouts for children.
       </p>
     </div>
-    <div class="three columns alpha">
-      Opes Advisors, Inc.
-      <div class="italic">San Mateo, CA</div>
+
+    <div class="three columns alpha title">
+      Opes Advisors, Inc. <br>
+      <em>San Mateo, CA</em>
     </div>
-    <div class="nine columns alpha">
+    <div class="eight columns omega">
       <div>
         Design Intern,
-        <span class="italic">August 2012 - May 2013</span>
+        <em>August 2012 - May 2013</em>
       </div>
       <p>
         Created print and digital marketing materials, powerpoint presentations,
-        graphics, wireframes and other marketing deliverables within the 
+        graphics, wireframes and other marketing deliverables within the
         company's branding standards.
       </p>
     </div>
-    <div class="three columns alpha">
-      Design Center
-      <div class="italic">Storrs, CT</div>
+
+    <div class="three columns alpha title">
+      Design Center <br>
+      <em>Storrs, CT</em>
     </div>
-    <div class="nine columns alpha">
+    <div class="eight columns omega">
       <div>
         Graphic Designer,
-        <span class="italic">January 2011 - May 2012</span>
+        <em>January 2011 - May 2012</em>
       </div>
       <p>
         Conceptualized and developed a variety of print, web, motion
         and brand identity.
       </p>
     </div>
-    <div class="three columns alpha">
-      Women's Center
-      <div class="italic">Storrs, CT</div>
+
+    <div class="three columns alpha title">
+      Women's Center <br>
+      <em>Storrs, CT</em>
     </div>
-    <div class="nine columns alpha">
+    <div class="eight columns omega">
       <div>
         Design Intern,
-        <span class="italic">August 2010 - May 2012</span>
+        <em>August 2010 - May 2012</em>
       </div>
       <p>
         Produced advertising materials for both print and web.
       </p>
     </div>
-    <div class="three columns alpha">
-      Yale University Press
-      <div class="italic">New Haven, CT</div>
+    <div class="three columns alpha title">
+      Yale University Press <br>
+      <em>New Haven, CT</em>
     </div>
-    <div class="nine columns alpha">
+    <div class="eight columns omega">
       <div>
         Design Intern,
-        <span class="italic">Summer 2010</span>
+        <em>Summer 2010</em>
       </div>
       <p>
-        Assisted in coordinating the production and manufacturing of each book 
-        which includes typesetting, photo-researching, creating paperback 
+        Assisted in coordinating the production and manufacturing of each book
+        which includes typesetting, photo-researching, creating paperback
         mechanicals and proofreading.
       </p>
     </div>
-    <div class="three columns alpha">
-      Bonnie Marcus Stylepress
-      <div class="italic">Westport, CT</div>
+    <div class="three columns alpha title">
+      Bonnie Marcus Stylepress <br>
+      <em>Westport, CT</em>
     </div>
-    <div class="nine columns alpha">
+    <div class="eight columns omega">
       <div>
         Design Intern,
-        <span class="italic">Summer 2009</span>
+        <em>Summer 2009</em>
       </div>
       <p>
         Helped with email campaigns and website inventory.
@@ -98,33 +110,45 @@ layout: default
     </div>
     <br class="clear" />
   </article>
-  <h5>SKILLS</h5>
+
   <article>
-    <p>
-      Adobe After Effects, Illustrator, In Design, Photoshop, 
+    <header>
+      <img class="resume-icon" src="/images/resume/skills-icon.png" alt="skills icon" />
+      <h5>SKILLS</h5>
+    </header>
+    <p class="title">
+      Adobe After Effects, Illustrator, In Design, Photoshop,
       Microsoft Word, Excel, Powerpoint, Hand Rendering and Sketching
     </p>
   </article>
-  <h5>AWARDS</h5>
+
   <article>
-    <p>
+    <header>
+      <img class="resume-icon" src="/images/resume/awards-icon.png" alt="awards icon" />
+      <h5>AWARDS</h5>
+    </header>
+    <p class="title">
       Connecticut Art Director’s Club / CADC 37th and 36th Annual Award Show,
-      <span class="italic">2012 & 2011</span>
+      <em>2012 & 2011</em>
     </p>
-    <p>
+    <p class="title">
       Feminist Art Award,
-      <span class="italic">2012</span>
+      <em>2012</em>
     </p>
-    <p>
+    <p class="title">
       Homecoming Banner (1st Place),
-      <span class="italic">2011 & 2010</span>
+      <em>2011 & 2010</em>
     </p>
-    <p>
+    <p class="title">
       School of Fine Arts Talent Scholarship Award,
-      <span class="italic">2011 & 2010</span>
+      <em>2011 & 2010</em>
     </p>
-    <p>
+    <p class="title">
       Graphic Design Achievements Award,
-      <span class="italic">2009</span>
+      <em>2009</em>
     </p>
+  </article>
+  <a href="/static/resume.pdf">
+    <img id="pdf-download" src="/images/resume/pdf-button.png" alt="pdf download button" />
+  </a>
 </section>
