Improved styles and alignment. Tweaked descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -3,19 +3,19 @@ layout: default
 title: About Me
 ---
 
-<section class="sixteen columns">
+<section class="sixteen columns about">
   <div class="five offset-by-two columns alpha">
     <img src="/images/headshot.png" alt="headshot" />
   </div>
   <article class="seven columns">
     <p>
-      I’m Jucelle. A designer, illustrator, observer and master doodler currently residing in San Francisco Bay Area. I’m easy to get along with and enjoy collaborating with fellow creatives and adventurers. I always equip myself with two trusty Moleskines in hand – one to keep myself on top of things and the other to scribble whatever awesome and not so awesome ideas I may have.
+      My name is Jucelle. A designer, illustrator, observer and master doodler currently residing in San Francisco Bay Area. I am easy to get along with and enjoy collaborating with fellow problem solvers and adventurers.
     </p>
     <p>
-      I enjoy being a creative. Every project that I make is approached with intelligent, thoughtful and well-informed ideations. Most of my work is centered around branding, identities, graphics, packaging and print.
+      Being creative is what I enjoy the most as it allows me to communicate my thoughts and share them with everyone. Each project that I produce is approached with intelligent, thoughtful and well-informed ideations. Majority of my work is centered around branding, identities, graphics, packaging and print.
     </p>
     <p>
-      I’m currently infatuated by watercolors, hand drawn letterforms, textures and organic-style vectors.
+      Currently infatuated by watercolors, hand drawn letterforms, textures, organic-style vectors and Starbucks refreshers.
     </p>
   </article>
 </section>
