--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 ---
 
-<section class="ten offset-by-three columns">
+<section class="twelve offset-by-two columns">
   <div class="five columns alpha">
     <h5>Say Hi!</h5>
     <br>
@@ -12,10 +12,10 @@ title: Contact
     </p>
     <p>Email: jucelle.lim@gmail.com</p>
   </div>
-  <form class="five columns omega contact-form">
+  <form class="five offset-by-two columns omega contact-form">
     <input type="text" style="width:100%" id="contact-name" placeholder="Name" />
     <input type="text" style="width:100%" id="contact-email" placeholder="Email" />
-    <textarea style="width:100%" id="contact-message" placeholder="Message" rows="16"></textarea>
+    <textarea style="width:100%" id="contact-message" placeholder="Message" rows="12"></textarea>
     <input id="send-button" type="image" src="/images/send-button.png" alt="submit button" />
   </form>
 </section>
