--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@ title: Contact
     </p>
     <p>Email: jucelle.lim@gmail.com</p>
   </div>
-  <form class="five offset-by-two columns omega contact-form">
+  <form class="six offset-by-one columns omega contact-form">
     <input type="text" style="width:100%" id="contact-name" placeholder="Name" />
     <input type="text" style="width:100%" id="contact-email" placeholder="Email" />
     <textarea style="width:100%" id="contact-message" placeholder="Message" rows="12"></textarea>
