Fixed safari bugs

--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,6 @@ title: Contact
     <input type="text" style="width:100%" id="contact-name" placeholder="Name" />
     <input type="text" style="width:100%" id="contact-email" placeholder="Email" />
     <textarea style="width:100%" id="contact-message" placeholder="Message" rows="12"></textarea>
-    <input id="send-button" type="image" src="/images/send-button.png" alt="submit button" />
+    <a class="send-button" href=""></a>
   </form>
 </section>
