--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: default
 title: Home
 ---
 
-<img class="homepage-image" src="/images/homepage.png" alt="home placeholder" />
+<img class="homepage-image" src="/images/homepage.png" alt="Home" />
