--- a/resume/index.html
+++ b/resume/index.html
@@ -73,7 +73,7 @@ title: Resume
     </div>
     <div class="eight columns omega">
       <div>
-        Design Intern,
+        Graphic Designer,
         <em>August 2010 - May 2012</em>
       </div>
       <p>
